--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,904 @@
-.App {
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+
+:root{
+    --primary-color: #FF3B30;
+    --secondary-color: #FFF6EA;
+    --action-color: #3B82F6;
+    --grey-color: #9a9a9a;
+    --black-color: #282828;
+    --white-color: #fff;
+    --lynx-white-color: #f7f7f7;
+    --violet-color: #5348C7;
+    --lynx-gray-color: #C5C5C5;
+    --font: 'Open Sans', sans-serif;
+    --xxl-size: 4rem;
+    --xl-size: 2.5rem;
+    --l-size: 2rem;
+    --m-size: 1.5rem;
+    --s-size: 1rem;
+    --xs-size:0.5rem;
+    --xl-font: 3rem;
+    --light-weight: 300;
+    --regular-weight: 400;
+    --semibold-weight: 600;
+    --bold-weight: 700;
+    --black-weight: 900;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    background-color: var(--lynx-white-color);
+    font-family: var(--font);
+    color: var(--black-color)
+}
+
+a {
+    color:inherit;
+    text-decoration: none;
+}
+
+button {
+    cursor: pointer;
+}
+
+img {
+    max-inline-size: 100%;
+    block-size: auto;
+    object-fit: cover;
+    display: block;
+    max-width: 100%;
+}
+
+li {
+    list-style: none;
+}
+
+
+/* --------------------------------------------- */
+
+/* calculation: 1rem: 16px */
+
+/* for headings */
+h1 {
+  font-size: var(--xl-font);
+  line-height: var(--xxl-size);
+}
+
+h2 {
+  font-size: var(--l-size);
+  line-height: var(--xl-size);
+}
+
+h3 {
+  font-size: var(--m-size);
+  line-height: var(--l-size);
+}
+
+h4 {
+  font-size: var(--s-size);
+  line-height: var(--m-size);
+}
+
+h6 {
+  font-size: var(--xs-size);
+  line-height: var(--s-size);
+}
+
+/* for text */
+.txt-xl {
+  font-size: var(--xl-font);
+  line-height: var(--xxl-size);
+}
+
+.txt-l {
+  font-size: var(--l-size);
+  line-height: var(--xl-size);
+}
+
+.txt-m {
+  font-size: var(--m-size);
+  line-height: var(--l-size);
+}
+
+.txt-s {
+  font-size: var(--s-size);
+  line-height: var(--m-size);
+}
+
+.txt-xs {
+  font-size: var(--xs-size);
+  line-height: var(--s-size);
+}
+
+/* for height and width */
+.h-full{
+  min-height: 100vh;
+}
+
+.w-full{
+  width: 100%;
+}
+
+/* for margin */
+.m-xxl {
+  margin: var(--xxl-size);
+}
+
+.m-xl {
+  margin: var(--xl-size);
+}
+
+.m-l {
+  margin: var(--l-size);
+}
+
+.m-m {
+  margin: var(--m-size);
+}
+
+.m-s {
+  margin: var(--s-size);
+}
+
+.m-xs {
+  margin: var(--xs-size);
+}
+
+.m-auto {
+  margin: auto;
+}
+
+.mt-xxl {
+  margin-top: var(--xxl-size);
+}
+
+.mt-xl {
+  margin-top: var(--xl-size);
+}
+
+.mt-l {
+  margin-top: var(--l-size);
+}
+
+.mt-m {
+  margin-top: var(--m-size);
+}
+
+.mt-s {
+  margin-top: var(--s-size);
+}
+
+.mt-xs {
+  margin-top: var(--xs-size);
+}
+
+.mb-xxl {
+  margin-bottom: var(--xxl-size);
+}
+
+.mb-xl {
+  margin-bottom: var(--xl-size);
+}
+
+.mb-l {
+  margin-bottom: var(--l-size);
+}
+
+.mb-m {
+  margin-bottom: var(--m-size);
+}
+
+.mb-s {
+  margin-bottom: var(--s-size);
+}
+
+.mb-xs {
+  margin-bottom: var(--xs-size);
+}
+
+.ml-xxl {
+  margin-left: var(--xxl-size);
+}
+
+.ml-xl {
+  margin-left: var(--xl-size);
+}
+
+.ml-l {
+  margin-left: var(--l-size);
+}
+
+.ml-m {
+  margin-left: var(--m-size);
+}
+
+.ml-s {
+  margin-left: var(--s-size);
+}
+
+.ml-xs {
+  margin-left: var(--xs-size);
+}
+
+.mr-xxl {
+  margin-right: var(--xxl-size);
+}
+
+.mr-xl {
+  margin-right: var(--xl-size);
+}
+
+.mr-l {
+  margin-right: var(--l-size);
+}
+
+.mr-m {
+  margin-right: var(--m-size);
+}
+
+.mr-s {
+  margin-right: var(--s-size);
+}
+
+.mr-xs {
+  margin-right: var(--xs-size);
+}
+
+.m-auto {
+  margin: auto;
+}
+
+/* for padding */
+.p-xxl {
+  padding: var(--xxl-size);
+}
+
+.p-xl {
+  padding: var(--xl-size);
+}
+
+.p-l {
+  padding: var(--l-size);
+}
+
+.p-m {
+  padding: var(--m-size);
+}
+
+.p-s {
+  padding: var(--s-size);
+}
+
+.p-xs {
+  padding: var(--xs-size);
+}
+
+.pt-xxl {
+  padding-top: var(--xxl-size);
+}
+
+.pt-xl {
+  padding-top: var(--xl-size);
+}
+
+.pt-l {
+  padding-top: var(--l-size);
+}
+
+.pt-m {
+  padding-top: var(--m-size);
+}
+
+.pt-s {
+  padding-top: var(--s-size);
+}
+
+.pt-xs {
+  padding-top: var(--xs-size);
+}
+
+.pb-xxl {
+  padding-bottom: var(--xxl-size);
+}
+
+.pb-xl {
+  padding-bottom: var(--xl-size);
+}
+
+.pb-l {
+  padding-bottom: var(--l-size);
+}
+
+.pb-m {
+  padding-bottom: var(--m-size);
+}
+
+.pb-s {
+  padding-bottom: var(--s-size);
+}
+
+.pb-xs {
+  padding-bottom: var(--xs-size);
+}
+
+.pl-xxl {
+  padding-left: var(--xxl-size);
+}
+
+.pl-xl {
+  padding-left: var(--xl-size);
+}
+
+.pl-l {
+  padding-left: var(--l-size);
+}
+
+.pl-m {
+  padding-left: var(--m-size);
+}
+
+.pl-s {
+  padding-left: var(--s-size);
+}
+
+.pl-xs {
+  padding-left: var(--xs-size);
+}
+
+.pr-xxl {
+  padding-right: var(--xxl-size);
+}
+
+.pr-xl {
+  padding-right: var(--xl-size);
+}
+
+.pr-l {
+  padding-right: var(--l-size);
+}
+
+.pr-m {
+  padding-right: var(--m-size);
+}
+
+.pr-s {
+  padding-right: var(--s-size);
+}
+
+.pr-xs {
+  padding-right: var(--xs-size);
+}
+
+/* for border radius */
+.br-s {
+  border-radius: 0.3rem;
+}
+
+.br-m {
+  border-radius: 0.6rem;
+}
+
+.br-l {
+  border-radius: 1rem;
+}
+
+.br-full {
+  border-radius: 50%;
+}
+
+/* border and outline */
+.border-none {
+  border: none;
+}
+
+.outline-transparent {
+  outline: 0.1rem solid transparent;
+}
+
+/* for font-weight */
+.fw-black {
+  font-weight: var(--black-weight);
+}
+
+.fw-bold {
+  font-weight: var(--bold-weight);
+}
+
+.fw-semibold {
+  font-weight: var(--semibold-weight);
+}
+
+.fw-regular {
+  font-weight: var(--regular-weight);
+}
+
+.fw-light {
+  font-weight: var(--light-weight);
+}
+
+.txt-center {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.txt-underline {
+  text-decoration: underline;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.txt-cursor {
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* color utility classes */
+.primary-color {
+  color: var(--primary-color);
+}
+
+.secondary-color {
+  color: var(--secondary-color);
+}
+
+.black-color {
+  color: var(--black-color);
+}
+
+.white-color {
+  color: var(--white-color);
+}
+
+.lynx-white-color {
+  color: var(--lynx-white-color);
+}
+
+.violet-color {
+  color: var(--violet-color);
+}
+
+.lynx-gray-color {
+  color: var(--lynx-gray-color);
+}
+
+.grey-color {
+  color: var(--grey-color);
+}
+
+.action-color {
+  color: var(--action-color);
+}
+
+.primary-bg {
+  background-color: var(--primary-color);
+}
+
+.secondary-bg {
+  background-color: var(--secondary-color);
+}
+
+.black-bg {
+  background-color: var(--black-color);
+}
+
+.white-bg {
+  background-color: var(--white-color);
+}
+
+.lynx-white-bg {
+  background-color: var(--lynx-white-color);
+}
+
+.violet-bg {
+  background-color: var(--violet-color);
+}
+
+.lynx-gray-bg {
+  background-color: var(--lynx-gray-color);
+}
+
+.grey-bg {
+  background-color: var(--grey-color);
+}
+
+.action-bg {
+  background-color: var(--action-color);
+}
+
+/* flex utility classes  */
+.flex {
   display: flex;
-  flex-direction: column;
+}
+
+.flex-row {
+  flex-flow: row wrap;
+}
+
+.flex-column {
+  flex-flow: column wrap;
+}
+
+.flex-space-between {
+  justify-content: space-between;
+}
+
+.nowrap {
+  flex-wrap: nowrap;
+}
+
+.flex-align-center {
+  align-items: center;
+}
+
+.flex-center {
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.flex-space-around {
+  justify-content: space-around;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.flex-space-evenly {
+  justify-content: space-evenly;
+}
+
+/* responsive image */
+.img-responsive {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+/* positions */
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+}
+
+@media only screen and (max-width: 650px) {
+  h1 {
+    font-size: var(--l-size);
+    line-height: var(--xl-size);
   }
-  to {
-    transform: rotate(360deg);
+
+  h2 {
+    font-size: var(--m-size);
+    line-height: var(--l-size);
   }
+
+  h3 {
+    font-size: var(--s-size);
+    line-height: var(--m-size);
+  }
+
+  h4 {
+    font-size: var(--xs-size);
+    line-height: var(--s-size);
+  }
+
+  .txt-xl {
+    font-size: var(--l-size);
+    line-height: var(--xl-size);
+  }
+
+  .txt-l {
+    font-size: var(--m-size);
+    line-height: var(--l-size);
+  }
+
+  .txt-m {
+    font-size: var(--s-size);
+    line-height: var(--m-size);
+  }
+
+  .m-xxl {
+    margin: var(--xl-size);
+  }
+
+  .m-xl {
+    margin: var(--l-size);
+  }
+
+  .m-l {
+    margin: var(--m-size);
+  }
+
+  .m-m {
+    margin: var(--s-size);
+  }
+
+  .m-s {
+    margin: var(--xs-size);
+  }
+
+  .mt-xxl {
+    margin-top: var(--xl-size);
+  }
+
+  .mt-xl {
+    margin-top: var(--l-size);
+  }
+
+  .mt-l {
+    margin-top: var(--m-size);
+  }
+
+  .mt-m {
+    margin-top: var(--s-size);
+  }
+
+  .mt-s {
+    margin-top: var(--xs-size);
+  }
+
+  .mb-xxl {
+    margin-bottom: var(--xl-size);
+  }
+
+  .mb-xl {
+    margin-bottom: var(--l-size);
+  }
+
+  .mb-l {
+    margin-bottom: var(--m-size);
+  }
+
+  .mb-m {
+    margin-bottom: var(--s-size);
+  }
+
+  .mb-s {
+    margin-bottom: var(--xs-size);
+  }
+
+  .ml-xxl {
+    margin-left: var(--xl-size);
+  }
+
+  .ml-xl {
+    margin-left: var(--l-size);
+  }
+
+  .ml-l {
+    margin-left: var(--m-size);
+  }
+
+  .ml-m {
+    margin-left: var(--s-size);
+  }
+
+  .ml-s {
+    margin-left: var(--xs-size);
+  }
+
+  .mr-xxl {
+    margin-right: var(--xl-size);
+  }
+
+  .mr-xl {
+    margin-right: var(--l-size);
+  }
+
+  .mr-l {
+    margin-right: var(--m-size);
+  }
+
+  .mr-m {
+    margin-right: var(--s-size);
+  }
+
+  .mr-s {
+    margin-right: var(--xs-size);
+  }
+
+  .p-xxl {
+    padding: var(--xl-size);
+  }
+
+  .p-xl {
+    padding: var(--l-size);
+  }
+
+  .p-l {
+    padding: var(--m-size);
+  }
+
+  .p-m {
+    padding: var(--s-size);
+  }
+
+  .p-s {
+    padding: var(--xs-size);
+  }
+
+  .pt-xxl {
+    padding-top: var(--xl-size);
+  }
+
+  .pt-xl {
+    padding-top: var(--l-size);
+  }
+
+  .pt-l {
+    padding-top: var(--m-size);
+  }
+
+  .pt-m {
+    padding-top: var(--s-size);
+  }
+
+  .pt-s {
+    padding-top: var(--xs-size);
+  }
+
+  .pb-xxl {
+    padding-bottom: var(--xl-size);
+  }
+
+  .pb-xl {
+    padding-bottom: var(--l-size);
+  }
+
+  .pb-l {
+    padding-bottom: var(--m-size);
+  }
+
+  .pb-m {
+    padding-bottom: var(--s-size);
+  }
+
+  .pb-s {
+    padding-bottom: var(--xs-size);
+  }
+
+  .pl-xxl {
+    padding-left: var(--xl-size);
+  }
+
+  .pl-xl {
+    padding-left: var(--l-size);
+  }
+
+  .pl-l {
+    padding-left: var(--m-size);
+  }
+
+  .pl-m {
+    padding-left: var(--s-size);
+  }
+
+  .pl-s {
+    padding-left: var(--xs-size);
+  }
+
+  .pr-xxl {
+    padding-right: var(--xl-size);
+  }
+
+  .pr-xl {
+    padding-right: var(--l-size);
+  }
+
+  .pr-l {
+    padding-right: var(--m-size);
+  }
+
+  .pr-m {
+    padding-right: var(--s-size);
+  }
+
+  .pr-s {
+    padding-right: var(--xs-size);
+  }
+}
+
+
+/* ---------------------------------------------------- */
+
+.container {
+  display: grid;
+  /* min-height: 100vh; */
+  height: max-content;
+  /* grid-gap: 1rem; */
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-areas:
+    "header header header"
+    "aside1 main aside2"
+    "aside1 main aside2"
+    "aside1 main aside2";
+}
+
+nav {
+  grid-area: header;
+}
+
+.sidebar1 {
+  grid-area: aside1;
+  width: max-content;
+}
+
+.sidebar2 {
+  grid-area: aside2;
+  height: max-content;
+}
+
+main {
+  grid-area: main;
+}
+
+
+/* ---------------------------- */
+
+
+.new-post-btn {
+  width: 12rem;
+}
+
+.gap-m {
+  gap: var(--m-size);
+}
+
+.border-bottom {
+  border-bottom: 1px solid var(--lynx-gray-color);
+}
+
+.width-xl {
+  width: var(--xl-size);
+}
+
+.height-xl {
+  height: var(--xl-size);
+}
+
+.sidebar {
+  height: 80vh;
+}
+
+.border {
+  border: 1px solid var(--lynx-gray-color);
+}
+
+.width-16 {
+  width: 16rem;
+}
+
+.width-7 {
+  width: 7rem;
+}
+
+.height-7 {
+  height: 7rem;
+}
+
+.width-10 {
+  width: 10rem;
+}
+
+.primary-border {
+  border: 1px solid var(--primary-color);
+}
+
+.red-color {
+  color: #ff3b30;
+}
+
+.green-color {
+  color: #34d399;
 }
