--- a/src/components/PostCard/PostCard.css
+++ b/src/components/PostCard/PostCard.css
@@ -1,120 +1,93 @@
-.post-card-container {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    gap: 0.5rem;
-    width: 100%;
-    padding: 0.5rem;
-    border-radius: 0.25rem;
-    background-color: white;
-    border: 1px solid var(--clr-border);
-  }
-  .post-card-body {
-    flex-grow: 1;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-  
-  .post-card-details {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: 0.3rem;
-    height: 2rem;
-    color: var(--clr-text-light);
-  }
-  
-  .post-card-details > .post-card-name {
-    display: flex;
-    flex-direction: column;
-    gap: 0.1rem;
-    cursor: pointer;
-  }
-  .post-card-details > .post-card-name > p,
-  .post-card-details > p {
-    font-size: var(--fs-200);
-  }
-  .post-card-details > .post-card-name > p:first-of-type {
-    font-weight: 600;
-    color: var(--clr-text);
-  }
-  .post-card-option {
-    margin-left: auto;
-    position: relative;
-  }
-  .post-card-option > button {
-    background-color: transparent;
-    border: none;
-    width: 1.8rem;
-    height: 1.8rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 100%;
-  }
-  .post-card-option > button:hover {
-    background-color: rgb(223, 223, 223);
-  }
-  .post-card-content {
-    font-size: var(--fs-300);
-    line-height: 1.5;
-    font-weight: 400;
-  }
-  .post-card-image {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 0.5rem;
-  }
-  .post-card-btn-container {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 0.75rem;
-  }
-  .post-card-btn-box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0.05rem;
-  }
-  .post-card-btn {
-    border: none;
-    background-color: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0.25rem;
-    border-radius: 100%;
-  }
-  .post-card-btn-box span {
-    font-size: 0.9rem;
-  }
-  .post-card-btn:hover {
-    background-color: rgb(223, 223, 223);
-  }
-  .post-card-container:last-of-type {
-    margin-bottom: 2.5rem;
-  }
-  @media (min-width: 768px) {
-    .post-card-container:last-of-type {
-      margin-bottom: 0;
-    }
-    .post-card-details {
-      align-items: center;
-    }
-    .post-card-details > .post-card-name {
-      flex-direction: row;
-      gap: 0.25rem;
-    }
-    .post-card-details > .post-card-name > p,
-    .post-card-details > p {
-      font-size: var(--fs-300);
-    }
-    .post-card-content {
-      margin-top: -0.5rem;
-    }
-  }
-  
+.postcard-main {
+  width: 75%;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: var(--white-color);
+  padding: 20px;
+  text-align: left;
+  border: 1px solid var(--grey-color);
+}
+
+.postcard-main .postcard-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.postcard-main .postcard-header .postcard-header-left {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  cursor: pointer;
+}
+
+.postcard-main .postcard-header .postcard-header-left h4 {
+  margin: 0;
+}
+
+.postcard-header-left img {
+  height: 60px;
+  width: 60px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.postcard-main video,
+.postcard-main img {
+  padding: 10px 0;
+}
+
+.postcard-main .postcard-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.postcard-main i {
+  cursor: pointer;
+}
+
+.postcard-main small {
+  color: var(--grey-color);
+}
+
+a {
+  color: blue;
+}
+
+.postcard-buttons .fa-solid {
+  color: var(--primary-color);
+}
+
+.postcard-buttons .fa-regular {
+  color: var(--primary-dark);
+}
+
+.postcard-content-main {
+  cursor: pointer;
+}
+
+.postcard-main .edit-delete-icon {
+  position: relative;
+}
+
+.postcard-main .edit-delete-icon .edit-delete-post-modal {
+  position: absolute;
+  border-radius: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: var(--white-color);
+  padding: 0.5rem;
+  font-weight: 700;
+  border: 1px solid var(--grey-color);
+  right: 0;
+}
+
+.postcard-main .edit-delete-icon .edit-delete-post-modal div {
+  padding: 5px;
+}
+
+.postcard-main .edit-delete-icon .edit-delete-post-modal div:hover {
+  background-color: var(--lightgrey-color);
+  cursor: pointer;
+  color: var(--primary-dark);
+  border-radius: 5px;
+}
