--- a/src/components/PostModal/PostModal.css
+++ b/src/components/PostModal/PostModal.css
@@ -1,136 +1,129 @@
-.post-modal-container {
-    display: flex;
-    align-items: flex-start;
-    max-width: 600px;
-    width: 94%;
-    margin: 0 auto;
-    margin-top: 1rem;
-    gap: 0.5rem;
-    padding: 0.5rem;
-    border-radius: 0.25rem;
-    background-color: white;
+.edit-post-modal-container {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 50;
+  inset: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.edit-post-modal-container .edit-post-modal {
+  background-color: var(--white-color);
+  margin: 0;
+  max-width: 24rem;
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 20px;
+  border: 1px solid var(--grey-color);
+  display: flex;
+  flex-direction: column;
+}
+
+.edit-post-modal h1 {
+  margin: 0;
+  padding: 0;
+}
+
+.edit-post-modal .edit-post-modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.edit-post-modal .edit-post-modal-header i {
+  font-size: 24px;
+}
+
+.edit-post-modal textarea {
+  resize: vertical;
+  width: calc(100% - 20px);
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+  font-family: "Poppins", sans-serif;
+}
+
+.edit-post-modal .selected-image-container {
+  width: 10rem;
+  position: relative;
+}
+
+.edit-post-modal .selected-image-container img,
+.edit-post-modal .selected-image-container video {
+  object-fit: cover;
+  width: 100%;
+}
+
+.edit-post-modal .selected-image-container button {
+  cursor: pointer;
+  font-size: 16px;
+  padding: 0.5rem;
+  background-color: var(--lightgrey-color);
+  border-radius: 50%;
+  position: absolute;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1.25rem;
+  height: 1.25rem;
+  top: 0.25rem;
+  right: 0.25rem;
+}
+
+.edit-post-modal-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.edit-post-modal-buttons i {
+  cursor: pointer;
+  font-size: 24px;
+  color: var(--primary-dark);
+  padding-right: 1rem;
+}
+
+.edit-post-modal-buttons .edit-post-modal-icons {
+  display: flex;
+  align-items: center;
+}
+
+.edit-post-modal-buttons .modal-button {
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  border: none;
+  cursor: pointer;
+  padding: 10px 25px;
+  font-family: "Poppins", sans-serif;
+}
+
+.edit-post-modal-buttons .modal-button:hover {
+  background-color: var(--primary-dark);
+}
+
+.edit-post-modal-buttons .disabled {
+  border: 2px solid var(--primary-dark);
+  background-color: transparent;
+  cursor: not-allowed;
+  color: var(--primary-dark);
+  font-family: "Poppins", sans-serif;
+  padding: 8px 25px;
+}
+
+.edit-post-modal-buttons .disabled:hover {
+  background-color: transparent;
+}
+
+.edit-emoji-picker {
+  position: absolute;
+  bottom: 0;
+}
+
+@media (max-width: 600px) {
+  .edit-post-modal-container .edit-post-modal {
+    max-width: 18rem;
   }
-  .post-modal-container > span {
-    flex-basis: 2rem;
-  }
-  
-  .post-modal-form {
-    flex-basis: calc(100% - 2.5rem);
-    display: flex;
-    flex-direction: column;
-    gap: 0.25rem;
-  }
-  .post-modal-form > textarea {
-    width: 100%;
-    font-size: var(--fs-300);
-    line-height: 1.5;
-    background-color: transparent;
-    font-family: "Open Sans", sans-serif;
-    min-height: 16ch;
-    resize: none;
-    border: none;
-  }
-  .post-modal-form > textarea:focus {
-    outline: none;
-  }
-  
-  .post-modal-btn-container {
-    width: fit-content;
-    margin-left: auto;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 1rem;
-  }
-  .post-modal-img-label {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .post-modal-image-upload-icon {
-    font-size: 1.3rem;
-    color: var(--clr-text);
-  }
-  .post-modal-img-input {
-    display: none;
-  }
-  .post-modal-btn-container > button {
-    border: none;
-    background-color: var(--clr-primary);
-    border: 1px solid var(--clr-primary);
-    color: var(--clr-text);
-    font-size: 0.9rem;
-    padding: 0.25rem 1.5rem;
-    border-radius: 0.25rem;
-  }
-  .post-modal-btn-container > button:first-of-type {
-    border: 1px solid var(--clr-text);
-    background-color: transparent;
-    color: var(--clr-text);
-  }
-  .post-modal-btn-container > button[disabled] {
-    cursor: not-allowed;
-    opacity: 0.5;
-    background-color: var(--clr-primary-light);
-    border: 1px solid var(--clr-primary-light);
-  }
-  .post-modal-img-display {
-    position: relative;
-    height: 150px;
-    border-radius: 0.25rem;
-    margin: 0.25rem 0;
-  }
-  .post-modal-img-display > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 0.5rem;
-  }
-  
-  .post-modal-img-display > button {
-    position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
-    width: 1.5rem;
-    height: 1.5rem;
-    background-color: rgba(255, 255, 255, 0.6);
-    border-radius: 100%;
-  }
-  .post-modal-btn-container > .emoji-picker-wrapper {
-    position: absolute;
-  }
-  .post-modal-btn-container > .emoji-picker-wrapper > .emoji-picker-container {
-    top: -420px;
-  }
-  
-  @media (min-width: 768px) {
-    .post-modal-container {
-      min-width: 55%;
-      margin-top: 3rem;
-    }
-  
-    .post-modal-form > textarea {
-      min-height: 8.5ch;
-    }
-    .post-modal-form > textarea:focus {
-      outline: none;
-    }
-  
-    .post-modal-img-display {
-      height: 250px;
-    }
-    .post-modal-btn-container > .emoji-picker-wrapper {
-      position: relative;
-    }
-    .post-modal-btn-container > .emoji-picker-wrapper > .emoji-picker-container {
-      top: -280px;
-      right: 6rem;
-    }
-  }
-  @media (min-width: 1024px) {
-    .post-modal-container {
-      min-width: 55%;
-      margin-top: 0;
-    }
-  }
-  
+}
