--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,211 +1,54 @@
-.sidebar {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    height: 100%;
+.right-sidebar {
+  border-left: 1px solid var(--black-color);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 25%;
+  min-height: 100vh;
+  position: fixed;
+  left: 72%;
+}
+
+.search-bar {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.search-bar input {
+  padding: 10px;
+  width: 100%;
+  border-radius: 5px;
+  border: 1px solid var(--grey-color);
+  font-size: 14px;
+  box-sizing: border-box;
+  outline: none;
+  font-family: "Poppins", sans-serif;
+}
+
+.search-bar input:focus {
+  border: 1.5px solid var(--primary-color);
+}
+
+.search-bar i {
+  position: absolute;
+  padding-right: 10px;
+}
+
+.search-bar input::placeholder {
+  color: var(--grey-color);
+}
+
+.suggested-users {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 5px;
+  padding: 5px 10px 30px 10px;
+  background-color: var(--white-color);
+}
+
+@media only screen and (max-width: 1024px) and (min-width: 601px) {
+  .right-sidebar {
+    padding: 10px;
   }
-  .nav,
-  .activeNav {
-    text-decoration: none;
-    padding: 0.4rem;
-    border-radius: 100%;
-    border: 1px solid var(--clr-background);
-  }
-  .nav > button,
-  .activeNav > button {
-    gap: 0.4rem;
-    color: var(--clr-text);
-    justify-content: flex-start;
-  }
-  
-  .nav > button > span,
-  .activeNav > button > span,
-  .nav-new-post-btn > span {
-    display: none;
-    font-size: var(--fs-200);
-    line-height: 1;
-  }
-  
-  .icon {
-    width: 1.1rem;
-    height: 1.1rem;
-  }
-  
-  .activeNav {
-    background-color: var(--clr-primary);
-  }
-  .nav:hover {
-    border: 1px solid var(--clr-border);
-    background-color: white;
-  }
-  .nav:last-of-type,
-  .activeNav:last-of-type {
-    order: 5;
-    padding: 0;
-  }
-  .nav:last-of-type > button > span:first-of-type,
-  .activeNav:last-of-type > button > span:first-of-type {
-    width: 1.8rem;
-    height: 1.8rem;
-    display: block;
-  }
-  
-  .nav:last-of-type > .nav-profile-btn > span {
-    text-align: left;
-  }
-  .nav:last-of-type > .nav-profile-btn > span > p:last-of-type,
-  .activeNav:last-of-type > .nav-profile-btn > span > p:last-of-type {
-    font-size: 0.8rem;
-    margin: 0.2rem 0;
-    color: var(--clr-text-light);
-  }
-  .nav:nth-child(3),
-  .activeNav:nth-child(3) {
-    order: 4;
-  }
-  .nav-new-post-btn {
-    order: 3;
-    text-decoration: none;
-    padding: 0.25rem;
-    border-radius: 100%;
-    border: 1px solid var(--clr-text);
-    background-color: var(--clr-text);
-    gap: 0.4rem;
-    color: var(--clr-primary);
-    justify-content: flex-start;
-  }
-  .new-post-model-box {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 10;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(50, 40, 49, 0.311);
-  }
-  .nav-profile-action {
-    position: absolute;
-    border: 1px solid var(--clr-border);
-    bottom: 2.8rem;
-    right: 4px;
-    width: 150px;
-    padding: 0.5rem;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: 0.25rem;
-    border-radius: 0.25rem;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  .nav-profile-action > button {
-    /* border: 1px solid blue; */
-    width: 100%;
-    padding: 0.5rem;
-    justify-content: flex-start;
-    gap: 0.25rem;
-    color: var(--clr-text);
-    border-radius: 0.25rem;
-  }
-  .nav-profile-action > button:hover {
-    background-color: var(--clr-primary);
-  }
-  @media (min-width: 768px) {
-    .sidebar {
-      flex-direction: column;
-      justify-content: flex-start;
-      gap: 1rem;
-    }
-  
-    .nav:last-of-type,
-    .activeNav:last-of-type {
-      margin-top: auto;
-    }
-  
-    .nav:nth-child(3),
-    .activeNav:nth-child(3) {
-      order: 3;
-    }
-  
-    .nav-new-post-btn {
-      order: 4;
-    }
-    .nav-profile-action {
-      bottom: 3rem;
-      right: -7.5rem;
-    }
-  }
-  
-  @media screen and (min-width: 1024px) {
-    .sidebar {
-      align-items: flex-start;
-      min-width: 178px;
-    }
-    .nav,
-    .activeNav {
-      display: block;
-      width: 100%;
-      border-radius: 0.25rem;
-      overflow: hidden;
-    }
-    .nav-profile-btn {
-      justify-content: space-between;
-      gap: 0.25rem;
-    }
-  
-    .nav-profile-btn > span:last-of-type {
-      width: calc(100% - 2.5rem);
-    }
-  
-    .nav-profile-btn > span:last-of-type > p {
-      display: block;
-      height: 1rem;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-    .nav > button,
-    .activeNav > button {
-      width: 100%;
-    }
-  
-    .nav > button > span,
-    .activeNav > button > span,
-    .nav-new-post-btn > span {
-      display: block;
-    }
-  
-    .icon {
-      width: 1rem;
-      height: 1rem;
-    }
-  
-    .nav:last-of-type,
-    .activeNav:last-of-type {
-      padding: 0.4rem;
-    }
-    .nav:last-of-type > button > span:first-of-type,
-    .activeNav:last-of-type > button > span:first-of-type {
-      width: 2rem;
-      height: 2rem;
-    }
-  
-    .nav-new-post-btn {
-      width: 100%;
-      padding: 0.4rem;
-      border-radius: 0.25rem;
-    }
-    .new-post-model-box {
-      align-items: center;
-    }
-    .nav-profile-action {
-      bottom: 3.7rem;
-      right: 0.5rem;
-    }
-  }
-  
+}
