--- a/src/pages/Welcome/Welcome.css
+++ b/src/pages/Welcome/Welcome.css
@@ -1,113 +1,92 @@
-.welcome-container {
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-    justify-content: center;
-    background-color: white;
+.landing-container {
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+
+.landing-main {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 10rem;
+}
+
+.header-image {
+  height: 70vh;
+  width: 30rem;
+}
+
+.landing-main .landing-right {
+  justify-content: space-between;
+}
+
+.landing-logo {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.landing-logo p {
+  text-transform: lowercase;
+  color: var(--primary-dark);
+  font-size: 36px;
+  font-weight: bold;
+  font-style: italic;
+}
+
+.landing-content {
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.landing-content span {
+  color: var(--grey-color);
+  font-size: 24px;
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.landing-content p {
+  font-size: small;
+}
+
+.join-now-btn {
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  border: none;
+  padding: 10px;
+  width: 100%;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 3rem;
+  font-family: "Poppins", sans-serif;
+}
+
+.login-link span {
+  color: var(--primary-dark);
+  cursor: pointer;
+}
+
+.login-link span:hover {
+  text-decoration: underline;
+}
+
+.header-image {
+  height: 70vh;
+  width: 30rem;
+}
+
+@media (max-width: 800px) {
+  .header-image {
+    display: none;
   }
-  
-  .welcome-container > img {
-    display: block;
-    width: calc(100% - 2rem);
-    margin: 1.5rem auto 0 auto;
+}
+
+@media only screen and (max-width: 1024px) and (min-width: 801px) {
+  .landing-main {
+    gap: 2rem;
   }
-  .welcome-body {
-    flex-basis: 50%;
-  }
-  .welcome-body > h1 {
-    font-size: var(--fs-xl);
-    line-height: 1.3;
-    font-weight: 800;
-    margin: 0 1rem;
-  }
-  .welcome-body > p {
-    font-size: var(--fs-400);
-    font-weight: 300;
-    line-height: 1.7;
-    padding: 0.5rem 0;
-    margin: 0 1rem;
-    margin-bottom: 0.5rem;
-  }
-  
-  .logo-container {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 0.25rem;
-    position: absolute;
-    top: 1rem;
-    left: 1rem;
-  }
-  .logo-container > img {
-    width: var(--fs-600);
-    height: var(--fs-600);
-  }
-  .logo-container > span {
-    font-size: var(--fs-500);
-    line-height: 1;
-    font-weight: 800;
-    color: var(--clr-text);
-  }
-  .primary-btn {
-    display: block;
-    font-size: var(--fs-300);
-    background-color: var(--clr-primary);
-    color: var(--clr-text);
-    width: calc(100% - 2rem);
-    padding: 0.6rem;
-    margin: 0 1rem;
-    border-radius: 0.5rem;
-  }
-  .link-btn {
-    display: block;
-    font-size: var(--fs-300);
-    color: var(--clr-text);
-    width: calc(100% - 2rem);
-    padding: 0.6rem;
-    border-radius: 0.5rem;
-    margin: 0 1rem;
-    text-align: center;
-    margin-bottom: 0.5rem;
-  }
-  
-  @media screen and (min-width: 1024px) {
-    .welcome-container {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-      gap: 1rem;
-    }
-  
-    .welcome-container > img {
-      width: 45vw;
-      margin: 0;
-    }
-    .welcome-body > h1 {
-      padding: 1.5rem 0;
-      margin: 0;
-    }
-    .welcome-body > p {
-      padding: 0;
-      margin: 0;
-    }
-  
-    .logo-container {
-      gap: 0.75rem;
-      top: 7%;
-      left: auto;
-    }
-  
-    .primary-btn {
-      width: 40%;
-      padding: 0.75rem;
-      margin: 0;
-      margin-top: 2.5rem;
-    }
-    .link-btn {
-      width: 40%;
-      padding: 0.75rem;
-      margin: 0;
-    }
-  }
-  
+}
