--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@ body {
 }
 
 :root {
-  --primary-color: #42a5f5;
-  --primary-dark: #1976d2;
+  --primary-color: #50f471;
+  --primary-dark: #08993dc4;
   --white-color: #ffffff;
   --black-color: #000000;
   --grey-color: #9ca3af;
